[gd_scene load_steps=16 format=2]

[ext_resource path="res://player/player0.png" type="Texture" id=1]
[ext_resource path="res://player/Player.gd" type="Script" id=2]
[ext_resource path="res://player/beam.png" type="Texture" id=3]
[ext_resource path="res://player/field.png" type="Texture" id=4]
[ext_resource path="res://effects/flare_01.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=5]
radius = 128.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 64, 480 )

[sub_resource type="Shader" id=11]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/teleport-effect

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result on godotshaders.com.
*/

shader_type canvas_item;

uniform float progress : hint_range(0.0, 1.0);
uniform float noise_desnity = 60;
uniform float beam_size : hint_range(0.01, 0.15);
uniform vec4 color : hint_color = vec4(0.0, 1.02, 1.2, 1.0);

// We are generating our own noise here. You could experiment with the 
// built in SimplexNoise or your own noise texture for other effects.
vec2 random(vec2 uv){
    uv = vec2( dot(uv, vec2(127.1,311.7) ),
               dot(uv, vec2(269.5,183.3) ) );
    return -1.0 + 2.0 * fract(sin(uv) * 43758.5453123);
}

float noise(vec2 uv) {
    vec2 uv_index = floor(uv);
    vec2 uv_fract = fract(uv);

    vec2 blur = smoothstep(0.0, 1.0, uv_fract);

    return mix( mix( dot( random(uv_index + vec2(0.0,0.0) ), uv_fract - vec2(0.0,0.0) ),
                     dot( random(uv_index + vec2(1.0,0.0) ), uv_fract - vec2(1.0,0.0) ), blur.x),
                mix( dot( random(uv_index + vec2(0.0,1.0) ), uv_fract - vec2(0.0,1.0) ),
                     dot( random(uv_index + vec2(1.0,1.0) ), uv_fract - vec2(1.0,1.0) ), blur.x), blur.y) * 0.5 + 0.5;
}

void fragment()
{
	vec4 tex = texture(TEXTURE, UV);
	
	float noise = noise(UV * noise_desnity) * UV.y;
	
	float d1 = step(progress, noise);
	float d2 = step(progress - beam_size, noise);
	
	vec3 beam = vec3(d2 - d1) * color.rgb;
	
	tex.rgb += beam;
	tex.a *= d2;
	
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 11 )
shader_param/progress = 0.0
shader_param/noise_desnity = 15.0
shader_param/beam_size = 0.15
shader_param/color = Color( 0, 1.02, 1.2, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 44 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 44 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flare:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flare:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "warp"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flare:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -24 ), Vector2( 0, -24 ), Vector2( 0, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flare:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 2, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource( 2 )

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer1" type="Timer" parent="."]

[node name="ShootTimer2" type="Timer" parent="."]

[node name="ShieldRegen" type="Timer" parent="."]

[node name="SpecialTimer" type="Timer" parent="."]
one_shot = true

[node name="FirePos1" type="Position2D" parent="."]
position = Vector2( -3, -18 )

[node name="FirePos2" type="Position2D" parent="."]
position = Vector2( 3, -18 )

[node name="FirePos3" type="Position2D" parent="."]
position = Vector2( -12, 3 )

[node name="FirePos4" type="Position2D" parent="."]
position = Vector2( 12, 3 )

[node name="Radius" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Radius"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Radius"]
visible = false
modulate = Color( 0, 0.501961, 1, 0.501961 )
position = Vector2( 0.500004, 0 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 4 )

[node name="Beam" type="Area2D" parent="."]

[node name="HitBox" type="CollisionShape2D" parent="Beam"]
position = Vector2( 0, -480 )
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="Beam"]
visible = false
modulate = Color( 0, 0.501961, 1, 0.501961 )
position = Vector2( 4.47035e-07, -480 )
scale = Vector2( 10.6667, 40 )
texture = ExtResource( 3 )

[node name="Flare" type="Sprite" parent="."]
modulate = Color( 0.8, 0.933333, 1, 1 )
position = Vector2( 0, -24 )
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 8 )
frames = SubResource( 4 )
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/warp = SubResource( 10 )

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="ShootTimer1" to="." method="_on_ShootTimer1_timeout"]
[connection signal="timeout" from="ShootTimer2" to="." method="_on_ShootTimer2_timeout"]
[connection signal="timeout" from="ShieldRegen" to="." method="_on_ShieldRegen_timeout"]
[connection signal="timeout" from="SpecialTimer" to="." method="_on_SpecialTimer_timeout"]
[connection signal="area_entered" from="Radius" to="." method="_on_Radius_area_entered"]
[connection signal="area_entered" from="Beam" to="." method="_on_Beam_area_entered"]
